--- a/src/@fuse/components/sidebar/sidebar.component.scss
+++ b/src/@fuse/components/sidebar/sidebar.component.scss
@@ -1,4 +1,5 @@
 @import "src/@fuse/scss/fuse";
+
 fuse-sidebar {
     display: flex;
     flex-direction: column;
@@ -8,37 +9,45 @@ fuse-sidebar {
     bottom: 0;
     overflow-x: hidden;
     overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
     width: 280px;
     min-width: 280px;
     max-width: 280px;
     z-index: 1000;
     box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.35);
     background: white;
+
     @include media-breakpoint-down('xs') {
         min-width: 0 !important;
         max-width: 80vw !important;
         width: 80vw !important;
     }
+
     &.left-positioned {
         left: 0;
         transform: translateX(-100%);
     }
+
     &.right-positioned {
         right: 0;
         transform: translateX(100%);
     }
+
     &.open {
         transform: translateX(0);
     }
+
     &.locked-open {
         position: relative !important;
         transform: translateX(0) !important;
     }
+
     &.folded {
         position: absolute !important;
         top: 0;
         bottom: 0;
     }
+
     &.animations-enabled {
         transition-property: transform, width, min-width, max-width;
         transition-duration: 150ms;
@@ -55,6 +64,7 @@ fuse-sidebar {
     z-index: 999;
     background-color: rgba(0, 0, 0, 0.6);
     opacity: 0;
+
     &.fuse-sidebar-overlay-invisible {
         background-color: transparent;
     }
