--- a/src/app/main/faq/faq.component.html
+++ b/src/app/main/faq/faq.component.html
@@ -4,8 +4,8 @@
     <div class="header mat-accent-bg p-16 p-sm-24" fxLayout="column" fxLayoutAlign="center center">
 
         <div class="hero-text mb-32">
-            <h1>We're here to help</h1>
-            <h3>Frequently asked questions</h3>
+            <h1>Frequently Asked Questions</h1>
+            <!-- <h3>Frequently asked questions</h3> -->
         </div>
 
         <div class="search mat-white-bg mat-elevation-z7" flex fxLayout="row" fxLayoutAlign="start center">
